Password validation in Change password & db additions for map

--- a/ECM2434/Ecolution/templates/settings.html
+++ b/ECM2434/Ecolution/templates/settings.html
@@ -164,6 +164,7 @@
 {% endblock %}
 
 {% block additional %}
+{{ block.super }}
 <script>
     document.addEventListener("DOMContentLoaded", function () {
         const fontSizeSelect = document.getElementById("font-size-select");
