--- a/ECM2434/Ecolution/templates/shop.html
+++ b/ECM2434/Ecolution/templates/shop.html
@@ -7,7 +7,7 @@
 
 {% block main %}
 <div class="shop-page margin_std">
-    <h2>Shop</h2>
+    <h2 class="text_light">Shop</h2>
     <div class="shop-items">
         {% if shop_items %}
             <ul class="shop-list">
