--- a/ECM2434/Ecolution/templates/signup.html
+++ b/ECM2434/Ecolution/templates/signup.html
@@ -11,7 +11,7 @@
 
 {% block main %}
     <section class="spacer_big"></section>
-    <section class="signup card flex_v flex_center box_shadow">
+    <section class="container flex_v flex_center box_shadow">
         <h2 class="text_dark margin_std_bot">Create an Account</h2>
         <form class="flex_v flex_v_fill" method="POST">
             {% csrf_token %}
