--- a/ECM2434/Ecolution/static/styles.css
+++ b/ECM2434/Ecolution/static/styles.css
@@ -10,11 +10,16 @@
 :root {
     --font_family_stack: Poppins, Arial, -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, Cantarell, Ubuntu, roboto, noto, helvetica, arial, sans-serif;
     --font_size_rem: 16px;
-    --color_dark: black;
+    --color_dark: #283633;
     --color_light: white;
     --color_light_off: #ddd;
     --color_primary: #3a8d84;
     --color_button: var(--color_primary);
+    --color_button_hover: #2F746C;
+    --color_button_active: #29665F;
+    --color_button_alt: rgb(235, 235, 235);
+    --color_button_alt_hover: rgb(215, 215, 215);
+    --color_button_alt_active: rgb(200, 200, 200);
     --color_button_hover: #2F746C;
     --color_button_active: #29665F;
     --color_button_menu: var(--color_light);
@@ -24,7 +29,9 @@
     --color_background: var(--color_primary);
     --color_page_background: #8abd8f;
     --color_page_background_sea: #82b3d8;
-    --color_form_background:  rgba(255, 255, 255, 0.95);
+    --color_form_background:  rgba(244, 244, 244, 1);
+    --color_form_background:  rgba(244, 244, 244, 1);
+    --color_form_background_glassy:  rgba(244, 244, 244, 0.8);
     --box_shadow: rgba(0, 0, 0, 0.16) 0px 0px 5px -6px, rgba(0, 0, 0, 0.12) 0px 8px 10px -2px;
     --text_light_shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
     --text_dark_shadow: 1px 1px 5px rgba(0, 0, 0, 0.12);
@@ -95,17 +102,36 @@ p {
     transition: 330ms ease;
 }
 
-.button_alt {
-    background-color: var(--color_primary);
-}
-
-
 .button:hover {
     background-color: var(--color_button_hover);
 }
 
 .button:active {
     background-color: var(--color_button_active);
+    box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125), var(--box_shadow);
+}
+
+.button_alt {
+    font-family: var(--font_family_stack);
+    background-color: var(--color_button_alt);
+    border: none;
+    border-radius: 2em;
+    height: fit-content;
+    padding: 0.5rem 1rem;
+    letter-spacing: var(--letter_spacing_lg);
+    padding: 10px;
+    color: var(--color_dark);
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 330ms ease;
+}
+
+.button_alt:hover {
+    background-color: var(--color_button_alt_hover);
+}
+
+.button_alt:active {
+    background-color: var(--color_button_alt_active);
     box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125), var(--box_shadow);
 }
 
@@ -137,6 +163,7 @@ input[type="range"] {
     background-color: var(--color_primary);
     border: none;
     width: 3rem;
+    height: 3rem;
     aspect-ratio: 1;
     border-radius: 2em;
 }
@@ -144,6 +171,12 @@ input[type="range"] {
 .button_img img {
     width: inherit;
     height: inherit;
+}
+
+.button_img svg {
+    width: 24px;
+    height: 24px;
+    vertical-align: middle;
 }
 
 /* Element: Button With Image (Light) */
@@ -190,6 +223,10 @@ img.img_leaf {
 
 
 /* [[[ 3. Helper Classes ]]] */
+.font_bold {
+    font-weight: bold;
+}
+
 .font_small {
     font-size: 0.8rem;
 }
@@ -376,8 +413,35 @@ section.cycle_pet_section {
     padding-bottom: 0.05px;
 }
 
+.card_alt {
+    background-color: var(--color_form_background);
+    border-radius: 1em;
+    margin-block: 1em;
+    /* This padding is here to prevent margin collapse */
+    padding-top: 0.05px;
+    padding-bottom: 0.05px;
+}
+
+.container {
+    background-color: var(--color_form_background);
+    padding: 1.2rem;
+    border-radius: 10px;
+    margin-block: 1em;
+}
+
 .box_shadow {
     box-shadow: var(--box_shadow);
+}
+
+.button_list {
+    list-style: none;
+    padding-left: 0px;
+}
+
+.button_list .button {
+    width: 100%;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 
@@ -487,19 +551,20 @@ section.signup {
     text-align: center;
 }
 
-/* Section: Settings Menu */
+/* Section: Main Menu */
 /* Ensure the parent container has relative positioning so we can position elements inside it */
-.button_settings {
+.main_menu_container {
     position: relative; /* This allows absolute positioning of the dropdown inside it */
 }
 
-/* General Settings Button and Menu Styling */
-section.settings_menu {
+/* General Main Menu Button and Menu Styling */
+section.main_menu {
     display: none; /* Initially hidden */
     position: absolute;
     top: 55px;
     left: 0;
-    background-color: var(--color_form_background);
+    background-color: var(--color_form_background_glassy);
+    backdrop-filter: blur(7px);
     border-radius: 0.8em;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     z-index: 10;
@@ -507,7 +572,7 @@ section.settings_menu {
     width: 200px; /* Set a reasonable width for the dropdown */
 }
 
-section.settings_menu a {
+section.main_menu a {
     display: block;
     padding: 10px;
     text-decoration: none;
@@ -516,8 +581,13 @@ section.settings_menu a {
     margin: 5px 0;
 }
 
-section.settings_menu a:hover {
+section.main_menu a:hover {
     background-color: var(--color_primary);
+    color: var(--color_light);
+}
+
+section.main_menu a:active {
+    background-color: var(--color_button_active);
     color: var(--color_light);
 }
 
