--- a/ECM2434/Ecolution/static/styles.css
+++ b/ECM2434/Ecolution/static/styles.css
@@ -358,45 +358,46 @@ section.pet img.hat {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 128px;
+    height: 128px;
     pointer-events: none; /* so clicks go through to the pet if needed */
 }
 
 .hat.mushroom.small {
     top: 40px;
-    left: 110px;
+    left: 100px;
 }
 .hat.mushroom.medium{
+    top: 32px;
+    left: 140px;
+}
+.hat.mushroom.large {
     top: 25px;
     left: 120px;
 }
-.hat.mushroom.large {
-    top: 10px;
-    left: 105px;
-}
 .hat.acorn.small {
-    top: 50px;
-    left: 118px;
+    top: 70px;
+    left: 130px;
 }
 .hat.acorn.medium {
-    top: 55px;
-    left: 120px;
+    top: 76px;
+    left: 135px;
 }
 .hat.acorn.large {
-    top: 30px;
-    left: 120px;
+    top: 50px;
+    left: 132px;
 }
 .hat.plant.small {
-    top: 60px;
-    left: 110px;
+    top: 70px;
+    left: 128px;
 }
 .hat.plant.medium {
-    top: 55px;
-    left: 120px;
+    top: 70px;
+    left: 125px;
 }
 .hat.plant.large {
-    top: -10px;
-    left: 110px;
+    top: -20px;
+    left: 135px;
 }
 
 section.cycle_pet_section {
