--- a/ECM2434/Ecolution/templates/base.html
+++ b/ECM2434/Ecolution/templates/base.html
@@ -56,6 +56,10 @@
                                 <a href="{% url 'gamekeeper_tasks' %}">Gamekeeper Tasks</a>
                             {% endif %}
                             <a href="{% url 'events' %}">Events</a>
+                            {% if user.is_gamekeeper %}
+                                <!-- Gamekeeper only menu item, allows gamekeepers to create predefined events for other users -->
+                                <a href="{% url 'gamekeeper_events' %}">Gamekeeper Events</a>
+                            {% endif %}
                             <a href="{% url 'shop' %}">Shop</a>
                             <a href="{% url 'leaderboard' %}">Leaderboard</a>
                             <a href="{% url 'qr_scanner' %}">QR Code Scanner</a>
