Fixed error with gamekeeper creator

--- a/ECM2434/Ecolution/templates/gamekeeper_events.html
+++ b/ECM2434/Ecolution/templates/gamekeeper_events.html
@@ -161,7 +161,7 @@
             <h3>Create Event</h3>
         </button>
 
-        <h1 class="text_light">Your Events</h1>
+        <h1 class="text_light">My Events</h1>
     
         <div class="event_list_container all-events-container">
             <div>
@@ -185,7 +185,7 @@
                         </div>
                     {% endfor %}
                 {% else %}
-                    <p class="text_dark">You havnt created any ongoing events</p>
+                    <p class="text_dark">You havn't created any ongoing events</p>
                 {% endif %}
             </div>
         </div>
@@ -214,7 +214,7 @@
                         <h3>Event Tasks:</h3>
                         <button type="button" onClick="addEventTask()" class="button text_light">+</button>  
                     </div>
-                    <div id="task_container ">
+                    <div id="task_container">
                         <div class="flex_h margin_sml_bot flex_gap_std">
                             <input type="text" name="task_name" placeholder="Task Name" class="flex_v_fill" required>
                             <input type="number" name="task_points" placeholder="Points" class="flex_v_fill" required>
