Changed leaves to points

--- a/ECM2434/Ecolution/templates/events.html
+++ b/ECM2434/Ecolution/templates/events.html
@@ -216,7 +216,7 @@
 
                     <div class="points">
                         <p id="points"></p>
-                        <p>  Points</p>
+                        <p>  Leaves</p>
                     </div>
             
                     
