--- a/ECM2434/Ecolution/templates/gamekeeper_events.html
+++ b/ECM2434/Ecolution/templates/gamekeeper_events.html
@@ -225,7 +225,7 @@
 
                     <div class="points">
                         <p id="points"></p>
-                        <p>  Points</p>
+                        <p>  Leaves</p>
                     </div>
 
                     <div class="flex_h flex_center">
