--- a/ECM2434/Ecolution/templates/gamekeeper_events.html
+++ b/ECM2434/Ecolution/templates/gamekeeper_events.html
@@ -218,6 +218,7 @@
                         <div class="flex_h margin_sml_bot flex_gap_std">
                             <input type="text" name="task_name" placeholder="Task Name" class="flex_v_fill" required>
                             <input type="number" name="task_points" placeholder="Points" class="flex_v_fill" required>
+                            <input type="number" name="task_xp" placeholder="XP" class="flex_v_fill" required>
                         </div>
                     </div>
                     <button type="submit" class="button text_light">Create Event</button>
