Slight changes to events and settings

--- a/ECM2434/Ecolution/templates/gamekeeper_events.html
+++ b/ECM2434/Ecolution/templates/gamekeeper_events.html
@@ -275,6 +275,7 @@
             taskItem.innerHTML = `
                 <input type="text" name="task_name" placeholder="Task Name" required>
                 <input type="number" name="task_points" placeholder="Points" required>
+                <input type="number" name="task_xp" placeholder="XP" class="flex_v_fill" required>
             `;
 
             taskContainer.appendChild(taskItem);
