--- a/ECM2434/Ecolution/templates/events.html
+++ b/ECM2434/Ecolution/templates/events.html
@@ -35,7 +35,7 @@
         .event_details {
             display: none;
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             height: 70vh;
             border-radius: 15px 15px;
             padding: 20px 20px;
